--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <name>ProjectMavenJava</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
-
+<!--webhooks-->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>17</maven.compiler.release>
